syntax = "proto3";
option csharp_namespace = "PresalesApp.Web.Shared";
package identity;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

message NullableInt32 {
	oneof kind {
		google.protobuf.NullValue null = 1;
		int32 value = 2;
	}
}

message NullableString {
	oneof kind {
		google.protobuf.NullValue null = 1;
		string value = 2;
	}
}

message Roles {
	repeated Role roles = 1;
}

message Role {
	string id = 1;
	NullableString name = 2;
	NullableString normalized_name = 3;
	NullableString concurrency_stamp = 4;
}

message NullableRole {
	oneof kind {
		google.protobuf.NullValue null = 1;
		Role value = 2;
	}
}

// Unused

message Query {
	string filter = 1;
	repeated FilterDescriptor filters = 2;
	repeated SortDescriptor sorts = 3;
	repeated google.protobuf.Any filter_parameters = 4;
	string order_by = 5;
	string expand = 6;
	string select = 7;
	NullableInt32 skip = 8;
	NullableInt32 top = 9;
}

message SortDescriptor {
	string property = 1;
	NullableSortOrder sort_order = 2;
}

message NullableSortOrder {
	oneof kind {
		google.protobuf.NullValue null = 1;
		SortOrder value = 2;
	}
}

message FilterDescriptor {
	string property = 1;
	google.protobuf.Any filter_value = 2;
	FilterOperator filter_operator = 3;
	google.protobuf.Any second_filter_value = 4;
	FilterOperator second_filter_operator = 5;
	LogicalFilterOperator logical_filter_operator = 6;
}

enum FilterOperator {
	FILTER_OPERATOR_EQUALS = 0;
	FILTER_OPERATOR_NOTEQUALS = 1;
	FILTER_OPERATOR_LESSTHAN = 2;
	FILTER_OPERATOR_LESSTHANOREQUALS = 3;
	FILTER_OPERATOR_GREATERTHAN = 4;
	FILTER_OPERATOR_GREATERTHANOREQUALS = 5;
	FILTER_OPERATOR_CONTAINS = 6;
	FILTER_OPERATOR_STARTSWITH = 7;
	FILTER_OPERATOR_ENDSWITH = 8;
	FILTER_OPERATOR_DOESNOTCONTAIN = 9;
	FILTER_OPERATOR_IN = 10;
	FILTER_OPERATOR_NOTIN = 11;
	FILTER_OPERATOR_ISNULL = 12;
	FILTER_OPERATOR_ISEMPTY = 13;
	FILTER_OPERATOR_ISNOTNULL = 14;
	FILTER_OPERATOR_ISNOTEMPTY = 15;
	FILTER_OPERATOR_CUSTOM = 16;
}

enum LogicalFilterOperator {
	LOGICAL_FILTER_OPERATOR_AND = 0;
	LOGICAL_FILTER_OPERATOR_OR = 1;
}

enum SortOrder {
	SORT_ORDER_ASCENDING = 0;
	SORT_ORDER_DESCENDING = 1;
}