syntax = "proto3";
// option csharp_namespace = "PresalesApp.ImageProvider";
package presales_app.image_provider;

import "presales_app/image_provider/image.proto";

message GetImageResponse {
	Image image = 1;
}